client/src/Components/Furniture.css
#furnitureRow {
  margin-top: 20%;
  margin-left: 10%;
}

#fLink {
  font-size: 3rem;
}

#bedCard {
  padding: 5%;
  border-radius: 1.5em;
  cursor: pointer;
}

#bedImg {
  width: 350px;
  height: 250px;
  display: block;
  padding: 5px;
  border-radius: 1.5em;
  box-shadow: 0 4px 6px 0 black;
}

.imageContainer {
  position: relative;
  width: 50%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 350px;
  height: 250px;
  opacity: 0;
  transition: 0.5s ease;
  background-color: rgb(70, 38, 16);
  border-radius: 1.5em;
}

.imageContainer:hover .overlay {
  opacity: 0.7;
  /* transform: translateX(-50%) translateY(-50%); */
}

.text {
  color: white;
  font-family: "Lexend Deca", sans-serif;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.text h6 {
  font-size: 1.5rem;
  font-weight: bold;
}

@media screen and (max-width: 600px) {
  #bedImg {
    margin-bottom: 10%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1065px) {
  #bedImg {
    max-width: 238px;
    height: 180px !important;
  }
  .overlay {
    max-width: 238px;
    height: 180px !important;
  }
}

@media only screen and (min-width: 1600px) {
  #bedImg {
    min-width: 450px;
    min-height: 350px !important;
  }
  .overlay {
    min-width: 450px;
    min-height: 350px !important;
  }
}

